# ginger-bucket

./: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml  services.toml
src/: main.rs  upload_consumer.rs  upload_expiry_watcher.rs  upload_rabbit.rs  upload_routes.rs  upload_session.rs
src/models/: mod.rs  upload_models.rs
src/routes/: mod.rs
